--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ar">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=8">
+        <meta name="viewport" content="width=device-width">
         <title>Colores</title>
         <link rel="stylesheet" href="estilos.css">
     </head>
