Cambio titulo de la pagina principal

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>Colores</title>
+        <title>CV Alejandro Mangioni</title>
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
