Agrego linea al menu

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
         <div class="grid-container">
             <div class="item1">CV Dinamico - Alejandro Mangioni</div>
             <div class="item2">
-                <nav class="flex-container horizontal">
+                <nav class="flex-container horizontal" style="border-color: gray; border-width: 1px; border-style: ridge; margin: 0 0.5rem 0 0.5rem">
                     <div><a href="#">Enlace 1</a></div>
                     <div class="submenu"><a href="#">Enlace 2</a>
                         <div class="flex-container vertical">
