Agregue pagina contcto y ubicacion

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>CV Alejandro Mangioni</title>
+        <title>CV Alejandro Mangioni - Contacto</title>
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
@@ -25,7 +25,15 @@
                     <div id="excepcion"><a href="#" id="mario"></a></div>
                 </nav>
             </div>
-            <div class="item3">Seleccione una opción para empezar</div>  
+            <div class="item3">
+                <form action="/action_page.php">
+                    <label for="fname">Ingrese su Nombre:</label><br>
+                    <input type="text" id="fname" value="Ingrese su Nombre"><br><br>
+                    <label for="mail">Ingrese Mail de Contacto:</label><br>
+                    <input type="text" id="mail" value="Ingrese su Mail"><br><br>
+                    <input type="submit" value="Contactar">
+                  </form> 
+            </div>  
             <div class="item4">Right</div>
             <div class="item5">Footer</div>
           </div>
