--- a/ubicacion.html
+++ b/ubicacion.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>CV Alejandro Mangioni</title>
+        <title>CV Alejandro Mangioni - Ubicacion</title>
         <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
@@ -25,7 +25,9 @@
                     <div id="excepcion"><a href="#" id="mario"></a></div>
                 </nav>
             </div>
-            <div class="item3">Seleccione una opción para empezar</div>  
+            <div class="item3">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.44366949785!2d-58.5033380131182!3d-34.6156624588238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1601340691933!5m2!1ses-419!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>  
             <div class="item4">Right</div>
             <div class="item5">Footer</div>
           </div>
