Agrego links restantes

--- a/construccion.html
+++ b/construccion.html
@@ -28,7 +28,7 @@
                     <div id="excepcion"><a href="#" id="mario"></a></div>
                 </nav>
             </div>
-            <div class="item3">Seleccione una opción para empezar</div>  
+            <div class="item3"><h3>Proximamente...</h3><img SRC="img/enconstruccion.gif"></div>  
             <div class="item4"><h3>Mi lista de desarrollos</h3><p>Te invito a ver mi lista de desarrollo de videojuegos con las principales características de cada uno:</p><a href="https://www.youtube.com/playlist?list=PLNS2ail786oBYkiSJ41uf3pnduEyZYOoC" target="_blank" style="color: slategrey; text-decoration: none; margin-top: 10rem;"><i class="fab fa-youtube" style="color: darkred"></i> <u>Desarrollos</u></a></div>
             <div class="item5"><a href="https://www.linkedin.com/in/alemangioni/" target="_blank" style="color: darkgrey; text-decoration: none; font-family: 'Sansita Swashed', cursive;"><i class="fab fa-linkedin" style="color: rgb(14, 103, 177);"></i> Linkedin</a></div>
           </div>
