--- a/idiomas.html
+++ b/idiomas.html
@@ -28,7 +28,13 @@
                     <div id="excepcion"><a href="#" id="mario"></a></div>
                 </nav>
             </div>
-            <div class="item3">Seleccione una opción para empezar</div>  
+            <div class="item3">
+                <h2>CVs en otros Idiomas</h2>
+                <ul>
+                    <li><a href="https://drive.google.com/u/0/uc?id=1KYu3E7FeiovBkVw8BzpL_XYWTv1IgRL-&export=download">Descargar en Español</li></a>
+                    <li><a href="https://drive.google.com/u/0/uc?id=1ewMzcV_I9seagT2vXkIPNuxpOgq9QqEw&export=download">Download in English</li></a>
+                </ul>
+            </div>  
             <div class="item4"><h3>Mi lista de desarrollos</h3><p>Te invito a ver mi lista de desarrollo de videojuegos con las principales características de cada uno:</p><a href="https://www.youtube.com/playlist?list=PLNS2ail786oBYkiSJ41uf3pnduEyZYOoC" target="_blank" style="color: slategrey; text-decoration: none; margin-top: 10rem;"><i class="fab fa-youtube" style="color: darkred"></i> <u>Desarrollos</u></a></div>
             <div class="item5"><a href="https://www.linkedin.com/in/alemangioni/" target="_blank" style="color: darkgrey; text-decoration: none; font-family: 'Sansita Swashed', cursive;"><i class="fab fa-linkedin" style="color: rgb(14, 103, 177);"></i> Linkedin</a></div>
           </div>
