--- a/contacto.html
+++ b/contacto.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="es-ar">
     <head>
+        <script src="https://kit.fontawesome.com/3e8ee29809.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <title>CV Alejandro Mangioni - Contacto</title>
+        <title>CV Alejandro Mangioni</title>
         <link rel="stylesheet" href="estilos.css">
+        <link rel="shortcut icon" type="image/x-icon" href="img/marioSalta.png"/>
+        <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="grid-container">
@@ -16,12 +19,12 @@
                         <div class="flex-container vertical">
                             <div><a href="ubicacion.html">¿Donde Vivo?</a></div>
                             <div><a href="contacto.html">Contactame</a></div>
-                            <div><a href="#">Enlace 2.3</a></div>
+                            <div><a href="construccion.html">404...</a></div>
                         </div>
                     </div>
-                    <div><a href="#">Enlace 3</a></div>
-                    <div><a href="#">Enlace 4</a></div>
-                    <div><a href="#">Enlace 5</a></div>
+                    <div><a href="construccion.html">404...</a></div>
+                    <div><a href="idiomas.html">Idiomas</a></div>
+                    <div><a href="construccion.html">Skills</a></div>
                     <div id="excepcion"><a href="#" id="mario"></a></div>
                 </nav>
             </div>
@@ -34,8 +37,8 @@
                     <input type="submit" value="Contactar">
                   </form> 
             </div>  
-            <div class="item4">Right</div>
-            <div class="item5">Footer</div>
+            <div class="item4"><h3>Mi lista de desarrollos</h3><p>Te invito a ver mi lista de desarrollo de videojuegos con las principales características de cada uno:</p><a href="https://www.youtube.com/playlist?list=PLNS2ail786oBYkiSJ41uf3pnduEyZYOoC" target="_blank" style="color: slategrey; text-decoration: none; margin-top: 10rem;"><i class="fab fa-youtube" style="color: darkred"></i> <u>Desarrollos</u></a></div>
+            <div class="item5"><a href="https://www.linkedin.com/in/alemangioni/" target="_blank" style="color: darkgrey; text-decoration: none; font-family: 'Sansita Swashed', cursive;"><i class="fab fa-linkedin" style="color: rgb(14, 103, 177);"></i> Linkedin</a></div>
           </div>
     </body>
 </html>
